--- a/index.html
+++ b/index.html
@@ -932,41 +932,41 @@ box-shadow: inset 2px 2px 2px 0px rgba(0,0,0,0.75);
               <img width="75" height="75" alt="Ionos" src=
               "/33D05754-37EF-4B6D-B35B-E60D1507DF48.png"
               class="image-2">
-              <h3 class="airdrop-name vertical"> Ionos </h3>
+              <h3 class="airdrop-name vertical"> IONOS Partners </h3>
               <div style="background-color:#6a69e1" class=
               "label vertical-label vertical-label-tablet">
-                Popular
+                Promoted
               </div>
               <div class="category vertical">
-                Category Name
+                Worldwide
               </div>
               <div class="airdrop-value vertical">
-                $7k
+                25+ Developers
               </div>
               <div class="airdrop-rating vertical">
-                ★★★★
+                ★★★
               </div>
             </div></a>
           </div>
 
   <div role="listitem" class=
           "collection-item w-dyn-item w-col w-col-2">
-            <a href="/cmts/sample" class=
+            <a href="/developers/appristas-io" class=
             "link-block-12 w-inline-block">
             <div class="div-block-4 vertical div-block">
               <img width="75" height="75" alt="" src=
               "/A2A1AFC2-124B-45A3-9BE5-7144CE40EBE8.PNG"
               class="image-2">
-              <h3 class="airdrop-name vertical"> Appristas.io </h3>
+              <h3 class="airdrop-name vertical"> Upwork </h3>
               <div style="background-color:#6a69e1" class=
               "label vertical-label vertical-label-tablet">
-                Popular
+                Featured
               </div>
               <div class="category vertical">
-                Category Name
+                Worldwide 🌎
               </div>
               <div class="airdrop-value vertical">
-                $7k
+                100+ Developers
               </div>
               <div class="airdrop-rating vertical">
                 ★★★★
@@ -980,26 +980,26 @@ box-shadow: inset 2px 2px 2px 0px rgba(0,0,0,0.75);
 
            <div role="listitem" class=
           "collection-item w-dyn-item w-col w-col-2">
-            <a href="/cmts/sample" class=
+            <a href="/developers/pagepro-co" class=
             "link-block-12 w-inline-block">
             <div class="div-block-4 vertical div-block">
-              <img width="75" height="75" alt="" src=
-              "/A2A1AFC2-124B-45A3-9BE5-7144CE40EBE8.PNG"
+              <img width="75" height="75" alt="Pagepro.co" src=
+              "/93A05F44-85FA-4BE6-A2DB-EDEB4D503207.png"
               class="image-2">
-              <h3 class="airdrop-name vertical"> Algolia
+              <h3 class="airdrop-name vertical"> Pagepro.co
  </h3>
               <div style="background-color:#6a69e1" class=
               "label vertical-label vertical-label-tablet">
                 Popular
               </div>
               <div class="category vertical">
-                Category Name
+                Worldwide 🌎
               </div>
               <div class="airdrop-value vertical">
-                $7k
+               25+ Developers
               </div>
               <div class="airdrop-rating vertical">
-                ★★★★
+                ★★★★★
               </div>
             </div></a>
           </div>
@@ -1007,25 +1007,25 @@ box-shadow: inset 2px 2px 2px 0px rgba(0,0,0,0.75);
 
             <div role="listitem" class=
           "collection-item w-dyn-item w-col w-col-2">
-            <a href="/cmts/sample" class=
+            <a href="/developers/swiftsell" class=
             "link-block-12 w-inline-block">
             <div class="div-block-4 vertical div-block">
-              <img width="75" height="75" alt="" src=
-              "/A2A1AFC2-124B-45A3-9BE5-7144CE40EBE8.PNG"
+              <img width="75" height="75" alt="Swiftsell" src=
+              "/8BCC0B45-12A2-40D3-BF3C-31C768308546.png"
               class="image-2">
-              <h3 class="airdrop-name vertical"> Bloomreach </h3>
+              <h3 class="airdrop-name vertical"> SwiftSell Pro </h3>
               <div style="background-color:#6a69e1" class=
               "label vertical-label vertical-label-tablet">
-                Popular
+                Featured
               </div>
               <div class="category vertical">
-                Category Name
+                Africa
               </div>
               <div class="airdrop-value vertical">
-                $7k
+                3+ Developers
               </div>
               <div class="airdrop-rating vertical">
-                ★★★★
+                No ratings yet
               </div>
             </div></a>
           </div>
@@ -1033,7 +1033,7 @@ box-shadow: inset 2px 2px 2px 0px rgba(0,0,0,0.75);
 
            <div role="listitem" class=
           "collection-item w-dyn-item w-col w-col-2">
-            <a href="/agencies/relume" class=
+            <a href="/developers/relume" class=
             "link-block-12 w-inline-block">
             <div class="div-block-4 vertical div-block">
               <img width="75" height="75" alt="" src=
@@ -1042,13 +1042,13 @@ box-shadow: inset 2px 2px 2px 0px rgba(0,0,0,0.75);
               <h3 class="airdrop-name vertical"> Relume </h3>
               <div style="background-color:#6a69e1" class=
               "label vertical-label vertical-label-tablet">
-                Popular
+                Featured
               </div>
               <div class="category vertical">
-                Category Name
+               Southern Africa
               </div>
               <div class="airdrop-value vertical">
-                $7k
+               5+ Developers
               </div>
               <div class="airdrop-rating vertical">
                 ★★★★
@@ -1120,19 +1120,19 @@ box-shadow: inset 2px 2px 2px 0px rgba(0,0,0,0.75);
 
            <div role="listitem" class=
           "collection-item w-dyn-item w-col w-col-2">
-            <a href="https://relume.co.za" target="_blank" class=
+            <a href="https://godaddy.com" target="_blank" class=
             "link-block-11 w-inline-block">
             <div class="div-block-4 vertical div-block">
-              <img width="75" height="75" alt="" src=
-              "/A2A1AFC2-124B-45A3-9BE5-7144CE40EBE8.PNG" class=
+              <img width="75" height="75" alt="GoDaddy" src=
+              "/1DEC9357-E47E-4A24-BFAE-87A648804062.png" class=
               "image-2">
-              <h3 class="airdrop-name vertical">Relume</h3>
+              <h3 class="airdrop-name vertical">GoDaddy</h3>
               <div style="background-color:#6a69e1" class=
               "label vertical-label vertical-label-tablet">
                 Promoted
               </div>
               <div class="category vertical">
-                South Africa 🇿🇦 
+                Get 30% off your next purchase 
               </div>
               <div class="airdrop-value vertical"></div>
               <div class="airdrop-rating vertical">
@@ -1144,13 +1144,13 @@ box-shadow: inset 2px 2px 2px 0px rgba(0,0,0,0.75);
 
            <div role="listitem" class=
           "collection-item w-dyn-item w-col w-col-2">
-            <a href="https://coingecko.com" target="_blank" class=
+            <a href="https://gatsby.io" target="_blank" class=
             "link-block-11 w-inline-block">
             <div class="div-block-4 vertical div-block">
-              <img width="75" height="75" alt="" src=
-              "/A2A1AFC2-124B-45A3-9BE5-7144CE40EBE8.PNG" class=
+              <img width="75" height="75" alt="Gatsby Agency Partners" src=
+              "/5F6D955E-63D2-46EB-970D-C58AEDBFA299.png" class=
               "image-2">
-              <h3 class="airdrop-name vertical">Builder.io</h3>
+              <h3 class="airdrop-name vertical"> Gatsby </h3>
               <div style="background-color:#6a69e1" class=
               "label vertical-label vertical-label-tablet">
                 Featured
@@ -1167,19 +1167,19 @@ box-shadow: inset 2px 2px 2px 0px rgba(0,0,0,0.75);
 
   <div role="listitem" class=
           "collection-item w-dyn-item w-col w-col-2">
-            <a href="https://jamstackthemes.com" target="_blank" class=
+            <a href="https://storyblok.io" target="_blank" class=
             "link-block-11 w-inline-block">
             <div class="div-block-4 vertical div-block">
-              <img width="75" height="75" alt="" src=
+              <img width="75" height="75" alt="The Notebook Project by Dygest.org" src=
               "/A2A1AFC2-124B-45A3-9BE5-7144CE40EBE8.PNG" class=
               "image-2">
-              <h3 class="airdrop-name vertical">Jamstack Themes</h3>
+              <h3 class="airdrop-name vertical"> Dygest.org </h3>
               <div style="background-color:#6a69e1" class=
               "label vertical-label vertical-label-tablet">
                 Sponsored
               </div>
               <div class="category vertical">
-                Worldwide 🌎
+                Get 50% off when you upgrade to premium
               </div>
               <div class="airdrop-value vertical"></div>
               <div class="airdrop-rating vertical">
@@ -1203,7 +1203,7 @@ box-shadow: inset 2px 2px 2px 0px rgba(0,0,0,0.75);
                 Sponsored
               </div>
               <div class="category vertical">
-                Worldwide 🌎
+                Get a custom domain from just $1
               </div>
               <div class="airdrop-value vertical"></div>
               <div class="airdrop-rating vertical">
@@ -1217,16 +1217,16 @@ box-shadow: inset 2px 2px 2px 0px rgba(0,0,0,0.75);
             <a href="https://coingecko.com" target="_blank" class=
             "link-block-11 w-inline-block">
             <div class="div-block-4 vertical div-block">
-              <img width="75" height="75" alt="" src=
+              <img width="75" height="75" alt="MoonClub" src=
               "/A2A1AFC2-124B-45A3-9BE5-7144CE40EBE8.PNG" class=
               "image-2">
-              <h3 class="airdrop-name vertical">Webflow</h3>
+              <h3 class="airdrop-name vertical">MoonClub Pay</h3>
               <div style="background-color:#6a69e1" class=
               "label vertical-label vertical-label-tablet">
                 Sponsored
               </div>
               <div class="category vertical">
-                Worldwide 🌎
+                Get 20% off your first project
               </div>
               <div class="airdrop-value vertical"></div>
               <div class="airdrop-rating vertical">
