--- a/index.html
+++ b/index.html
@@ -1070,12 +1070,16 @@ box-shadow: inset 2px 2px 2px 0px rgba(0,0,0,0.75);
 
 
 
+
+
+
+
 <!---SPONSORED-->
 
   <div class="section-26 wf-section">
     <div class="div-block-125">
       <div>
-        <h1 class="heading-list popular-airdrop">Don't miss out on these exclusive offers<br>from our sponsors and partners
+        <h1 class="heading-list popular-airdrop">Don't miss out on these exclusive, limited-time offers<br>from our amazing sponsors and partners
 </h1>
       </div>
     </div>
@@ -1144,30 +1148,30 @@ box-shadow: inset 2px 2px 2px 0px rgba(0,0,0,0.75);
 
            <div role="listitem" class=
           "collection-item w-dyn-item w-col w-col-2">
-            <a href="https://gatsby.io" target="_blank" class=
+            <a href="https://jamstacker.xyz/pwa-builder" target="_blank" class=
             "link-block-11 w-inline-block">
             <div class="div-block-4 vertical div-block">
-              <img width="75" height="75" alt="Gatsby Agency Partners" src=
-              "/5F6D955E-63D2-46EB-970D-C58AEDBFA299.png" class=
+              <img width="75" height="75" alt="PWA Builder" src=
+              "/65B54118-CDD5-45D1-8E31-C03A0610076A.png" class=
               "image-2">
-              <h3 class="airdrop-name vertical"> Gatsby </h3>
+              <h3 class="airdrop-name vertical"> PWA Builder </h3>
               <div style="background-color:#6a69e1" class=
               "label vertical-label vertical-label-tablet">
                 Featured
               </div>
               <div class="category vertical">
-                1 January 2022
+                Turn your online store into a native app for just $25 once-off
               </div>
               <div class="airdrop-value vertical"></div>
               <div class="airdrop-rating vertical">
-                
+                Ends 31 March 2022
               </div>
             </div></a>
           </div>
 
   <div role="listitem" class=
           "collection-item w-dyn-item w-col w-col-2">
-            <a href="https://storyblok.io" target="_blank" class=
+            <a href="https://dygest.org/jamstacker" target="_blank" class=
             "link-block-11 w-inline-block">
             <div class="div-block-4 vertical div-block">
               <img width="75" height="75" alt="The Notebook Project by Dygest.org" src=
@@ -1179,11 +1183,11 @@ box-shadow: inset 2px 2px 2px 0px rgba(0,0,0,0.75);
                 Sponsored
               </div>
               <div class="category vertical">
-                Get 50% off when you upgrade to premium
+                Get 50% off when you upgrade to a premium membership plan
               </div>
               <div class="airdrop-value vertical"></div>
               <div class="airdrop-rating vertical">
-                
+                Ends 31 March 2022
               </div>
             </div></a>
           </div>
