--- a/index.html
+++ b/index.html
@@ -1345,30 +1345,42 @@ box-shadow: inset 2px 2px 2px 0px rgba(0,0,0,0.75);
           </div>
           <div class=
           "div-block-49 bottom w-hidden-main w-hidden-medium w-hidden-small">
-            <a href="#" class=
+            
+
+<a href="#" class=
             "footer-social-link w-inline-block"><img src=
-            "https://uploads-ssl.webflow.com/5ba7e424b828fc638b530a9b/5bb9e92f02efe96999601940_facebook.svg"
-            width="18" alt="" class=
-            "footer-social-icon"></a><a href="#" class=
+            "/A183FA49-D1F9-4A6D-B644-53F6B7CB369D.png"
+            width="18" height="auto" alt="Angular" class=
+            "footer-social-icon"></a>
+
+<a href="#" class=
             "footer-social-link w-inline-block"><img src=
-            "https://uploads-ssl.webflow.com/5ba7e424b828fc638b530a9b/5bb9e8e102efe9259060192f_twitter%20(1).svg"
-            width="18" alt="" class=
-            "footer-social-icon"></a><a href="#" class=
+            "/84ED31FA-8DDE-4246-8A31-34B0C9AF1C24.png"
+            width="18" height="auto" alt="Vue" class=
+            "footer-social-icon"></a>
+
+<a href="#" class=
             "footer-social-link w-inline-block"><img src=
-            "https://uploads-ssl.webflow.com/5ba7e424b828fc638b530a9b/5bb9e8e188480926ece074f6_telegram-logo.svg"
-            width="18" alt="" class=
-            "footer-social-icon"></a><a href="#" class=
+            "/1D77FBEA-6F0D-4C8B-8FB4-F5CDA187A55D.png"
+            width="18" alt="Netlify" class=
+            "footer-social-icon"></a>
+
+<a href="#" class=
             "footer-social-link w-inline-block"><img src=
-            "https://uploads-ssl.webflow.com/5ba7e424b828fc638b530a9b/5bb9e8e16b929f2d446ddd1a_instagram%20(2).svg"
-            width="18" alt="" class=
-            "footer-social-icon"></a><a href="#" class=
+            "/1D77FBEA-6F0D-4C8B-8FB4-F5CDA187A55D.png"
+            width="18" height="auto" alt="GitHub" class=
+            "footer-social-icon"></a>
+
+<a href="#" class=
             "footer-social-link w-inline-block"><img src=
-            "https://uploads-ssl.webflow.com/5ba7e424b828fc638b530a9b/5bb9e90a28dfc3a5d9956c9c_youtube%20(1).svg"
-            width="18" alt="" class=
-            "footer-social-icon"></a><a href="#" class=
+            "7D1815BE-E944-45B9-897A-B9AFCE03983E.png"
+            width="18" height="auto" alt="React" class=
+            "footer-social-icon"></a>
+
+<a href="#" class=
             "footer-social-link w-inline-block"><img src=
-            "https://uploads-ssl.webflow.com/5ba7e424b828fc638b530a9b/5bb9e8e128dfc376ad956c95_linkedin%20(1).svg"
-            width="18" alt="" class="footer-social-icon"></a>
+            "/7D1815BE-E944-45B9-897A-B9AFCE03983E.png"
+            width="18" width="auto" alt="Gatsby JS" class="footer-social-icon"></a>
           </div>
         </div>
       </div>
