--- a/donate.html
+++ b/donate.html
@@ -6,29 +6,8 @@
 data-wf-status="1">
 <head>
   <meta charset="utf-8">
-  <title>Pricing - App X - Webflow Ecommerce Website
-  Template</title>
-  <meta content=
-  "Presenting App X, our latest App Webflow Template designed for iOS and Android apps looking to have an amazing website to start getting app downloads as easy as 1, 2, 3."
-  name="description">
-  <meta content=
-  "Pricing - App X - Webflow Ecommerce Website Template" property=
-  "og:title">
-  <meta content=
-  "Presenting App X, our latest App Webflow Template designed for iOS and Android apps looking to have an amazing website to start getting app downloads as easy as 1, 2, 3."
-  property="og:description">
-  <meta content=
-  "https://assets.website-files.com/60b0fc1ddfea6980daf21a18/60e85db87f9aed2f3190b6e2_open-graph-app-x-webflow-template.png"
-  property="og:image">
-  <meta content=
-  "Pricing - App X - Webflow Ecommerce Website Template" property=
-  "twitter:title">
-  <meta content=
-  "Presenting App X, our latest App Webflow Template designed for iOS and Android apps looking to have an amazing website to start getting app downloads as easy as 1, 2, 3."
-  property="twitter:description">
-  <meta content=
-  "https://assets.website-files.com/60b0fc1ddfea6980daf21a18/60e85db87f9aed2f3190b6e2_open-graph-app-x-webflow-template.png"
-  property="twitter:image">
+  <title>Support our cause - Jamstacker</title>
+ 
   <meta property="og:type" content="website">
   <meta content="summary_large_image" name="twitter:card">
   <meta content="width=device-width, initial-scale=1" name=
@@ -53,7 +32,9 @@ data-wf-status="1">
 </head>
 <body>
   <div class="page-wrapper">
-    <div data-collapse="medium" data-animation="over-left"
+   
+<!---NAVIGATION
+ <div data-collapse="medium" data-animation="over-left"
     data-duration="400" data-w-id=
     "58db7844-5919-d71b-dd74-2323ed8dffe9" data-easing="ease"
     data-easing2="ease" role="banner" class="header w-nav">
@@ -454,11 +435,14 @@ data-wf-status="1">
       </div>
       <div class="bg header"></div>
     </div>
+
+-->
+
     <div class="section pricing wf-section">
       <div class="container-medium-730px pricing">
         <h1 data-w-id="b1748724-96d7-d721-d6ea-64a0b05ed28c" style=
         "-webkit-transform:translate3d(0, 80px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 80px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 80px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 80px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0"
-        class="title pricing">Our plans</h1>
+        class="title pricing">Support our cause with a donation. As a free (ad-supported) service, contributions help us maintain the platform and improve its functionality over time.</h1>
         <p data-w-id="142d8864-f454-ac49-85cb-26aa8ed596ee" style=
         "-webkit-transform:translate3d(0, 80px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 80px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 80px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 80px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0"
         class="paragraph-large pricing">Lorem ipsum dolor sit amet
@@ -776,6 +760,8 @@ data-wf-status="1">
         </div>
       </div>
     </div>
+
+<!--FOOTER
     <footer class="footer">
       <div class="container-default w-container">
         <div class="footer-wrapper">
@@ -979,6 +965,9 @@ data-wf-status="1">
         </div>
       </div>
     </footer>
+-->
+
+
   </div>
   <script src=
   "https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=60b0fc1ddfea6980daf21a18"
