--- a/index.html
+++ b/index.html
@@ -88,8 +88,8 @@ box-shadow: inset 2px 2px 2px 0px rgba(0,0,0,0.75);
             sizes=
             "(max-width: 767px) 26px, (max-width: 991px) 3vw, 26px"
             class="image-9"></a><a href=
-            "/donate" target="_blank" class=
-            "button-9 w-button">Donate $1 </a>
+            "/pricing" target="_blank" class=
+            "button-9 w-button">Sign Up </a>
             <div class=
             "div-search w-hidden-medium w-hidden-small w-hidden-tiny">
               <form action="/search" class="search-2 w-form">
