Update and rename donate.html to pricing.html

--- a/pricing.html
+++ b/pricing.html
@@ -6,7 +6,7 @@
 data-wf-status="1">
 <head>
   <meta charset="utf-8">
-  <title>Support our cause - Jamstacker</title>
+  <title>Getting Started - Jamstacker</title>
  
   <meta property="og:type" content="website">
   <meta content="summary_large_image" name="twitter:card">
@@ -465,7 +465,7 @@ data-wf-status="1">
               "%5B%7B%22from%22%3A%22f_main_image_4dr%22%2C%22to%22%3A%22src%22%7D%5D"
               alt="" class="image card-plan-icon"></div>
               <div class="card-plan-title-wrapper">
-                <h2 class="title h3-size card-plan">Basic</h2>
+                <h2 class="title h3-size card-plan">Freemium (Ad-Supported)</h2>
                 <p class="paragraph card-plan-excerpt">Lorem ipsum
                 dolor sit amet dolor consectetur luil adipiscing
                 elit placerat</p>
@@ -567,7 +567,7 @@ data-wf-status="1">
               "%5B%7B%22from%22%3A%22f_main_image_4dr%22%2C%22to%22%3A%22src%22%7D%5D"
               alt="" class="image card-plan-icon"></div>
               <div class="card-plan-title-wrapper">
-                <h2 class="title h3-size card-plan">Standard</h2>
+                <h2 class="title h3-size card-plan">Premium</h2>
                 <p class="paragraph card-plan-excerpt">Lorem ipsum
                 dolor sit amet dolor consectetur luil adipiscing
                 elit placerat</p>
@@ -664,7 +664,7 @@ data-wf-status="1">
               "%5B%7B%22from%22%3A%22f_main_image_4dr%22%2C%22to%22%3A%22src%22%7D%5D"
               alt="" class="image card-plan-icon"></div>
               <div class="card-plan-title-wrapper">
-                <h2 class="title h3-size card-plan">Pro</h2>
+                <h2 class="title h3-size card-plan">Donor</h2>
                 <p class="paragraph card-plan-excerpt">Lorem ipsum
                 dolor sit amet dolor consectetur luil adipiscing
                 elit placerat</p>
@@ -675,10 +675,10 @@ data-wf-status="1">
                 <div data-wf-sku-bindings=
                 "%5B%7B%22from%22%3A%22f_price_%22%2C%22to%22%3A%22innerHTML%22%7D%5D"
                 class="card-plan-price">
-                  $ 19.00 USD
+                  $ 5.00 USD
                 </div>
                 <div class="card-plan-price-text">
-                  /monthly
+                  /once-off
                 </div>
               </div>
             </div>
@@ -703,7 +703,7 @@ data-wf-status="1">
                   alt="" class=
                   "image card-plan-feature-icon-2 w-condition-invisible"></div>
                   <div>
-                    All in Standard, plus
+                    All in Premium, except
                   </div>
                 </div>
                 <div class="card-plan-feature-wrapper">
