--- a/index.html
+++ b/index.html
@@ -1013,7 +1013,7 @@ box-shadow: inset 2px 2px 2px 0px rgba(0,0,0,0.75);
               <img width="75" height="75" alt="Swiftsell" src=
               "/8BCC0B45-12A2-40D3-BF3C-31C768308546.png"
               class="image-2">
-              <h3 class="airdrop-name vertical"> SwiftSell Pro </h3>
+              <h3 class="airdrop-name vertical"> SwiftSell </h3>
               <div style="background-color:#6a69e1" class=
               "label vertical-label vertical-label-tablet">
                 Featured
@@ -1025,7 +1025,7 @@ box-shadow: inset 2px 2px 2px 0px rgba(0,0,0,0.75);
                 3+ Developers
               </div>
               <div class="airdrop-rating vertical">
-                No ratings yet
+               ★★★★
               </div>
             </div></a>
           </div>
@@ -1111,7 +1111,7 @@ box-shadow: inset 2px 2px 2px 0px rgba(0,0,0,0.75);
                 Sponsored
               </div>
               <div class="category vertical">
-                Worldwide 🌎
+                $20 lifetime discount after trial (Basic)
               </div>
               <div class="airdrop-value vertical"></div>
               <div class="airdrop-rating vertical">
@@ -1160,11 +1160,11 @@ box-shadow: inset 2px 2px 2px 0px rgba(0,0,0,0.75);
                 Featured
               </div>
               <div class="category vertical">
-                Turn your online store into a native app for just $25 once-off
+                Turn website into app for $25
               </div>
               <div class="airdrop-value vertical"></div>
               <div class="airdrop-rating vertical">
-                Ends 31 March 2022
+               
               </div>
             </div></a>
           </div>
@@ -1183,11 +1183,11 @@ box-shadow: inset 2px 2px 2px 0px rgba(0,0,0,0.75);
                 Sponsored
               </div>
               <div class="category vertical">
-                Get 50% off when you upgrade to a premium membership plan
+                Get 50% off when you upgrade
               </div>
               <div class="airdrop-value vertical"></div>
               <div class="airdrop-rating vertical">
-                Ends 31 March 2022
+               
               </div>
             </div></a>
           </div>
@@ -1207,7 +1207,7 @@ box-shadow: inset 2px 2px 2px 0px rgba(0,0,0,0.75);
                 Sponsored
               </div>
               <div class="category vertical">
-                Get a custom domain from just $1
+                Buy a domain from just $1
               </div>
               <div class="airdrop-value vertical"></div>
               <div class="airdrop-rating vertical">
