--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 data-wf-status="1">
 <head>
   <meta charset="utf-8">
-  <title>Jamstacker | The #1 Jamstack Directory Platform</title>
+  <title>Jamstacker | The World's #1 Jamstack Directory Platform</title>
   <meta content=
   "Sign up today and be a part of the leading Jamstack-based directory and online community in the world."
   name="description">
@@ -122,21 +122,28 @@ box-shadow: inset 2px 2px 2px 0px rgba(0,0,0,0.75);
               </div>
               <nav class="dropdown-list-3 w-dropdown-list">
                 <a href="#" class=
-                "category-link w-dropdown-link">Brand Name</a>
+                "category-link w-dropdown-link">Agencies & Developers</a>
                 <a href="#" class=
-                "category-link w-dropdown-link">Brand Name</a>
+                "category-link w-dropdown-link">Content Management System (CMS)</a>
                 <a href="#" class=
-                "category-link w-dropdown-link">Brand Name</a>
+                "category-link w-dropdown-link">Case Studies & Examples</a>
                 <a href="#" class=
-                "category-link w-dropdown-link">Brand Name</a> <a href=
-                "#" class="category-link w-dropdown-link">Brand Name</a>
+                "category-link w-dropdown-link">Hosting & CDN</a> 
+
+<a href=
+                "#" class="category-link w-dropdown-link">E-Commerce & Shopping Carts</a>
+
+<a href=
+                "#" class="category-link w-dropdown-link">News & Community Forums</a>
                 <a href="#" class=
-                "category-link w-dropdown-link">Brand Name</a> <a href=
+                "category-link w-dropdown-link">Static Site Generators</a> <a href=
                 "#" class=
-                "category-link w-dropdown-link">Brand Name</a><a href=
+                "category-link w-dropdown-link">Templates & UI Components</a><a href=
                 "#"
-                class="category-link w-dropdown-link">Brand Name</a><a href="https://www.airdropnext.com/search?query=tech"
-                class="category-link w-dropdown-link">Brand Name</a>
+                class="category-link w-dropdown-link">User Authentication & Forms</a>
+
+<a href="/platforms"
+                class="category-link w-dropdown-link">Software-as-a-Service</a>
               </nav>
             </div>
             <div data-delay="0" data-hover="false" class=
@@ -148,23 +155,38 @@ box-shadow: inset 2px 2px 2px 0px rgba(0,0,0,0.75);
                 </div>
               </div>
               <nav class="dropdown-list-4 w-dropdown-list">
-                <a href="/airdrops" class=
-                "category-link w-dropdown-link">All</a><a href=
-                "/featured" class=
-                "category-link w-dropdown-link">Featured</a><a href="https://airdropnext.com/airdrop/exclusive"
+                <a href="/affiliates" class=
+                "category-link w-dropdown-link">Affiliates</a>
+
+<a href=
+                "/donors" class=
+                "category-link w-dropdown-link">Donor Programme</a>
+
+<a href="/events"
                 class=
-                "category-link w-dropdown-link">Exclusive</a><a href="http://airdropnext.com/airdrops/contest"
+                "category-link w-dropdown-link">Event Calendar</a>
+
+<a href="https://shop.jamstacker.xyz"
                 class=
-                "category-link w-dropdown-link">Contest</a><a href=
-                "#" class=
-                "category-link w-dropdown-link">Giveaway</a><a href="http://airdropnext.com/airdrops/refer-earn"
-                class="category-link w-dropdown-link">Refer &
-                Earn</a><a href="#"
+                "category-link w-dropdown-link">Features & Pricing</a>
+
+<a href=
+                "/promotions" class="category-link w-dropdown-link">Official Merchandise</a>
+
+<a href=
+                "/resources" class=
+                "category-link w-dropdown-link">Resource Library</a>
+
+<a href="/stories"
                 target="_blank" class=
-                "category-link w-dropdown-link">Bounty</a>
+                "category-link w-dropdown-link">Web Stories (Beta)</a>
               </nav>
-            </div><a href="/community" class=
-            "nav-link-8 w-nav-link">Community Forum</a><a href=
+            </div>
+
+<a href="/community" class=
+            "nav-link-8 w-nav-link">Community Forum</a>
+
+<a href=
             "/contact" class="nav-link-9 w-nav-link">Contact
             Support</a>
           </nav>
@@ -237,8 +259,8 @@ box-shadow: inset 2px 2px 2px 0px rgba(0,0,0,0.75);
       <h1 class="heading-20">Jamstacker Official Launch
       Campaign.</h1>
 
-<a href="/donate" target="_blank" class=
-      "button-8 w-button">Donate </a>
+<a href="/pricing" target="_blank" class=
+      "button-8 w-button"> Join The Club</a>
     </div>
   </div>
 
