--- a/index.html
+++ b/index.html
@@ -703,6 +703,36 @@ box-shadow: inset 2px 2px 2px 0px rgba(0,0,0,0.75);
   </div>
 
 
+
+
+<!--AMAZON BANNER-->
+<section class="wf-section"> 
+
+<div class="alignleft">
+     <script type="text/javascript">
+       	amzn_assoc_ad_type = "banner";
+	amzn_assoc_marketplace = "amazon";
+	amzn_assoc_region = "US";
+	amzn_assoc_placement = "assoc_banner_placement_default";
+	amzn_assoc_campaigns = "software";
+	amzn_assoc_banner_type = "category";
+	amzn_assoc_p = "26";
+	amzn_assoc_isresponsive = "false";
+	amzn_assoc_banner_id = "1AZX4VTPA9YVFC83NS82";
+	amzn_assoc_width = "468";
+	amzn_assoc_height = "60";
+	amzn_assoc_tracking_id = "dygest0f-20";
+	amzn_assoc_linkid = "f7528593d5e802b48a9238945c54ccd3";
+     </script>
+     <script src="//z-na.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&Operation=GetScript&ID=OneJS&WS=1"></script>
+    </div>
+</section>
+
+<!--END OF AMAZON BANNER-->
+
+
+
+
 <!---EXAMPLES-->
 
   <div class="section-13 wf-section">
@@ -892,6 +922,14 @@ box-shadow: inset 2px 2px 2px 0px rgba(0,0,0,0.75);
 
 
 
+<!--NAMECHEAP BANNER-->
+<section class="wf-section"> 
+<a href="https://namecheap.pxf.io/a1LADN" alt="Namecheap" target="_blank" rel="sponsored"><img src="/5618-1187126.png" width="auto" height="auto"/></a>
+</section>
+
+<!--END OF NAMECHEAP BANNER-->
+
+
 
 <!---AGENCIES-->
 
@@ -902,7 +940,7 @@ box-shadow: inset 2px 2px 2px 0px rgba(0,0,0,0.75);
       </div>
       <div>
         <div class="text-block-18">
-          <a href="#" class=
+          <a href="/developers" class=
           "link-2">See More</a>
         </div>
       </div>
@@ -921,7 +959,7 @@ box-shadow: inset 2px 2px 2px 0px rgba(0,0,0,0.75);
 
     <div role="listitem" class=
           "collection-item w-dyn-item w-col w-col-2">
-            <a href="/agencies/bejamas" class=
+            <a href="/developers/bejamas" class=
             "link-block-12 w-inline-block">
             <div class="div-block-4 vertical div-block">
               <img width="75" height="75" alt="Bejamas.io" src=
@@ -933,7 +971,7 @@ box-shadow: inset 2px 2px 2px 0px rgba(0,0,0,0.75);
                 Popular
               </div>
               <div class="category vertical">
-                Category Name
+                Worldwide 🌎
               </div>
               <div class="airdrop-value vertical">
                 $7k
@@ -948,7 +986,7 @@ box-shadow: inset 2px 2px 2px 0px rgba(0,0,0,0.75);
 
             <div role="listitem" class=
           "collection-item w-dyn-item w-col w-col-2">
-            <a href="/agencies/ionos" class=
+            <a href="/developers/ionos" class=
             "link-block-12 w-inline-block">
             <div class="div-block-4 vertical div-block">
               <img width="75" height="75" alt="Ionos" src=
@@ -960,7 +998,7 @@ box-shadow: inset 2px 2px 2px 0px rgba(0,0,0,0.75);
                 Promoted
               </div>
               <div class="category vertical">
-                Worldwide
+                Worldwide 🌎
               </div>
               <div class="airdrop-value vertical">
                 25+ Developers
@@ -1041,7 +1079,7 @@ box-shadow: inset 2px 2px 2px 0px rgba(0,0,0,0.75);
                 Featured
               </div>
               <div class="category vertical">
-                Africa
+                S. Africa 🇿🇦
               </div>
               <div class="airdrop-value vertical">
                 3+ Developers
@@ -1061,13 +1099,13 @@ box-shadow: inset 2px 2px 2px 0px rgba(0,0,0,0.75);
               <img width="75" height="75" alt="" src=
               "/D2D5D71F-4C65-4BEC-8E33-1447E1CCB109.png"
               class="image-2">
-              <h3 class="airdrop-name vertical"> Relume </h3>
+              <h3 class="airdrop-name vertical">Relume</h3>
               <div style="background-color:#6a69e1" class=
               "label vertical-label vertical-label-tablet">
                 Featured
               </div>
               <div class="category vertical">
-               Southern Africa
+               S. Africa
               </div>
               <div class="airdrop-value vertical">
                5+ Developers
@@ -1088,11 +1126,24 @@ box-shadow: inset 2px 2px 2px 0px rgba(0,0,0,0.75);
 
   </div>
 
-<!---END OF CMT SECTION-->
 
-
-
-
+<section class="wf-section">
+<div class="alignleft">
+     <script type="text/javascript">
+       	amzn_assoc_ad_type = "banner";
+	amzn_assoc_marketplace = "amazon";
+	amzn_assoc_region = "US";
+	amzn_assoc_placement = "assoc_banner_placement_default";
+	amzn_assoc_campaigns = "audible";
+	amzn_assoc_banner_type = "category";
+	amzn_assoc_isresponsive = "true";
+	amzn_assoc_banner_id = "1PNWF7FB7SJ3PA5WXQG2";
+	amzn_assoc_tracking_id = "dygest0f-20";
+	amzn_assoc_linkid = "04843edaf66cff07881932723f8c6c51";
+     </script>
+     <script src="//z-na.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&Operation=GetScript&ID=OneJS&WS=1"></script>
+    </div>
+</section>
 
 
 
@@ -1101,7 +1152,7 @@ box-shadow: inset 2px 2px 2px 0px rgba(0,0,0,0.75);
   <div class="section-26 wf-section">
     <div class="div-block-125">
       <div>
-        <h1 class="heading-list popular-airdrop">Don't miss out on these exclusive, limited-time offers<br>from our amazing sponsors and partners
+        <h1 class="heading-list trending-airdrop">In Case You Missed It...
 </h1>
       </div>
     </div>
