--- a/index.html
+++ b/index.html
@@ -936,7 +936,7 @@ box-shadow: inset 2px 2px 2px 0px rgba(0,0,0,0.75);
   <div id="CMTs" class="section-13 wf-section">
     <div class="div-block-52">
       <div>
-        <h1 class="heading-list popular-airdrop">Top Agencies & Developers</h1><br>
+        <h1 class="heading-list popular-airdrop">Top Agencies & Developers</h1>
       </div>
       <div>
         <div class="text-block-18">
