--- a/index.html
+++ b/index.html
@@ -738,7 +738,7 @@ box-shadow: inset 2px 2px 2px 0px rgba(0,0,0,0.75);
   <div class="section-13 wf-section">
     <div class="div-block-52">
       <div>
-        <h1 class="heading-list trending-airdrop">Examples & Use Cases</h1>
+        <h1 class="heading-list popular-airdrop">Examples & Use Cases</h1>
       </div>
       <div>
         <div class="text-block-18">
@@ -766,13 +766,13 @@ box-shadow: inset 2px 2px 2px 0px rgba(0,0,0,0.75);
               <h3 class="airdrop-name vertical"> SKYBOX </h3>
               <div style="background-color:#6a69e1" class=
               "label vertical-label vertical-label-tablet">
-                Popular
+                Featured
               </div>
               <div class="category vertical">
-                Category Name
+                Audio Streaming
               </div>
               <div class="airdrop-value vertical">
-                $7k
+               skybox.life
               </div>
               <div class="airdrop-rating vertical">
                 ★★★★
@@ -790,16 +790,16 @@ box-shadow: inset 2px 2px 2px 0px rgba(0,0,0,0.75);
               <img width="75" height="75" alt="Dygest.org" src=
               "/5F6D955E-63D2-46EB-970D-C58AEDBFA299.png"
               class="image-2">
-              <h3 class="airdrop-name vertical"> Dygest.org </h3>
+              <h3 class="airdrop-name vertical">The Notebook Project</h3>
               <div style="background-color:#6a69e1" class=
               "label vertical-label vertical-label-tablet">
-                Popular
+                Promoted
               </div>
               <div class="category vertical">
-                Category Name
+                Content Curation
               </div>
               <div class="airdrop-value vertical">
-                $7k
+                dygest.org
               </div>
               <div class="airdrop-rating vertical">
                 ★★★★
@@ -820,13 +820,13 @@ box-shadow: inset 2px 2px 2px 0px rgba(0,0,0,0.75);
               <h3 class="airdrop-name vertical"> Clothier </h3>
               <div style="background-color:#6a69e1" class=
               "label vertical-label vertical-label-tablet">
-                Popular
+                Featured
               </div>
               <div class="category vertical">
                 Category Name
               </div>
               <div class="airdrop-value vertical">
-                $7k
+                clothier.co.za
               </div>
               <div class="airdrop-rating vertical">
                 ★★★★
@@ -848,13 +848,13 @@ box-shadow: inset 2px 2px 2px 0px rgba(0,0,0,0.75);
               <h3 class="airdrop-name vertical"> Pan Macmillan </h3>
               <div style="background-color:#6a69e1" class=
               "label vertical-label vertical-label-tablet">
-                Popular
+                Featured
               </div>
               <div class="category vertical">
-                Category Name
+                Content Publisher
               </div>
               <div class="airdrop-value vertical">
-                $7k
+                pacmacmillan.com
               </div>
               <div class="airdrop-rating vertical">
                 ★★★★
