--- a/index.html
+++ b/index.html
@@ -1014,10 +1014,10 @@ box-shadow: inset 2px 2px 2px 0px rgba(0,0,0,0.75);
             <a href="/developers/appristas-io" class=
             "link-block-12 w-inline-block">
             <div class="div-block-4 vertical div-block">
-              <img width="75" height="75" alt="" src=
-              "/A2A1AFC2-124B-45A3-9BE5-7144CE40EBE8.PNG"
+              <img width="75" height="75" alt="Upwork" src=
+              "/52710D92-3F0D-43A5-B3D3-DC0E2D7D3400.png"
               class="image-2">
-              <h3 class="airdrop-name vertical"> Upwork </h3>
+              <h3 class="airdrop-name vertical">Upwork</h3>
               <div style="background-color:#6a69e1" class=
               "label vertical-label vertical-label-tablet">
                 Featured
