--- a/index.html
+++ b/index.html
@@ -1128,21 +1128,26 @@ box-shadow: inset 2px 2px 2px 0px rgba(0,0,0,0.75);
 
 
 <section class="wf-section">
+
 <div class="alignleft">
      <script type="text/javascript">
        	amzn_assoc_ad_type = "banner";
 	amzn_assoc_marketplace = "amazon";
 	amzn_assoc_region = "US";
 	amzn_assoc_placement = "assoc_banner_placement_default";
-	amzn_assoc_campaigns = "audible";
+	amzn_assoc_campaigns = "kindle";
 	amzn_assoc_banner_type = "category";
-	amzn_assoc_isresponsive = "true";
-	amzn_assoc_banner_id = "1PNWF7FB7SJ3PA5WXQG2";
+	amzn_assoc_p = "48";
+	amzn_assoc_isresponsive = "false";
+	amzn_assoc_banner_id = "0PA4YRDT71B8KC02R2G2";
+	amzn_assoc_width = "728";
+	amzn_assoc_height = "90";
 	amzn_assoc_tracking_id = "dygest0f-20";
-	amzn_assoc_linkid = "04843edaf66cff07881932723f8c6c51";
+	amzn_assoc_linkid = "572a35c56ddf4717e2ab1b462f9375bd";
      </script>
      <script src="//z-na.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&Operation=GetScript&ID=OneJS&WS=1"></script>
     </div>
+
 </section>
 
 
