--- a/index.html
+++ b/index.html
@@ -843,15 +843,15 @@ box-shadow: inset 2px 2px 2px 0px rgba(0,0,0,0.75);
             "link-block-12 w-inline-block">
             <div class="div-block-4 vertical div-block">
               <img width="75" height="75" alt="Pan Macmillan" src=
-              "/A2A1AFC2-124B-45A3-9BE5-7144CE40EBE8.PNG"
+              "/C76B83F5-52A7-4FD6-BAFA-7DD877F14CED.png"
               class="image-2">
-              <h3 class="airdrop-name vertical"> Pan Macmillan </h3>
+              <h3 class="airdrop-name vertical">Pan Macmillan</h3>
               <div style="background-color:#6a69e1" class=
               "label vertical-label vertical-label-tablet">
                 Featured
               </div>
               <div class="category vertical">
-                Content Publisher
+                Book Publisher
               </div>
               <div class="airdrop-value vertical">
                 pacmacmillan.com
@@ -870,21 +870,21 @@ box-shadow: inset 2px 2px 2px 0px rgba(0,0,0,0.75);
             "link-block-12 w-inline-block">
             <div class="div-block-4 vertical div-block">
               <img width="75" height="75" alt="Nexxus" src=
-              "/A2A1AFC2-124B-45A3-9BE5-7144CE40EBE8.PNG"
+              "/720A6176-5C82-4F01-A9C4-295B00C5C672.png"
               class="image-2">
-              <h3 class="airdrop-name vertical"> Nexxus </h3>
+              <h3 class="airdrop-name vertical">Nexxus</h3>
               <div style="background-color:#6a69e1" class=
               "label vertical-label vertical-label-tablet">
                 Popular
               </div>
               <div class="category vertical">
-                Category Name
+                Hair Salon
               </div>
               <div class="airdrop-value vertical">
-                $7k
+                nexxus.com
               </div>
               <div class="airdrop-rating vertical">
-                ★★★★
+                ★★★
               </div>
             </div></a>
           </div>
@@ -896,19 +896,19 @@ box-shadow: inset 2px 2px 2px 0px rgba(0,0,0,0.75);
             <a href="/cmts/sample" class=
             "link-block-12 w-inline-block">
             <div class="div-block-4 vertical div-block">
-              <img width="75" height="75" alt="COVID-19 Tracker" src=
-              "/A2A1AFC2-124B-45A3-9BE5-7144CE40EBE8.PNG"
+              <img width="75" height="75" alt="COVID-19 Tracking Project" src=
+              "/720A6176-5C82-4F01-A9C4-295B00C5C672.png"
               class="image-2">
-              <h3 class="airdrop-name vertical"> COVID-19 Tracker </h3>
+              <h3 class="airdrop-name vertical">COVID-19 Tracking Project</h3>
               <div style="background-color:#6a69e1" class=
               "label vertical-label vertical-label-tablet">
-                Popular
+                Featured
               </div>
               <div class="category vertical">
-                Category Name
+                Medical/Technology
               </div>
               <div class="airdrop-value vertical">
-                $7k
+                covidtracking.com
               </div>
               <div class="airdrop-rating vertical">
                 ★★★★
