--- a/index.html
+++ b/index.html
@@ -1378,37 +1378,49 @@ box-shadow: inset 2px 2px 2px 0px rgba(0,0,0,0.75);
           </div>
           <h1 class="heading-12">jamstacker</h1>
           <div class="div-block-49 w-hidden-tiny">
-            <a href="https://facebook.com/" target=
+            <a href="#" target=
             "_blank" class=
             "footer-social-link w-inline-block"><img src=
-            "https://uploads-ssl.webflow.com/5ba7e424b828fc638b530a9b/5bb9e92f02efe96999601940_facebook.svg"
-            width="18" alt="Facebook" class=
-            "footer-social-icon"></a><a href=
-            "https://twitter.com/" class=
+            "/A183FA49-D1F9-4A6D-B644-53F6B7CB369D.png
+            width="18" alt="Angular" class=
+            "footer-social-icon"></a>
+
+<a href=
+            "#" class=
             "footer-social-link w-inline-block"><img src=
-            "https://uploads-ssl.webflow.com/5ba7e424b828fc638b530a9b/5bb9e8e102efe9259060192f_twitter%20(1).svg"
-            width="18" alt="Twitter" class=
-            "footer-social-icon"></a><a href=
-            "https://t.me/" target="_blank" class=
+            "/84ED31FA-8DDE-4246-8A31-34B0C9AF1C24.png"
+            width="18" alt="Vue JS" class=
+            "footer-social-icon"></a>
+
+<a href=
+            "#" target="_blank" class=
             "footer-social-link w-inline-block"><img src=
-            "https://uploads-ssl.webflow.com/5ba7e424b828fc638b530a9b/5bb9e8e188480926ece074f6_telegram-logo.svg"
-            width="18" alt="Telegram" class=
-            "footer-social-icon"></a><a href=
-            "https://instagram.com/" target="_blank"
+            "/1D77FBEA-6F0D-4C8B-8FB4-F5CDA187A55D.png"
+            width="18" alt="Netlify" class=
+            "footer-social-icon"></a>
+
+<a href=
+            "#" target="_blank"
             class="footer-social-link w-inline-block"><img src=
-            "https://uploads-ssl.webflow.com/5ba7e424b828fc638b530a9b/5bb9e8e16b929f2d446ddd1a_instagram%20(2).svg"
-            width="18" alt="Instagram" class=
-            "footer-social-icon"></a><a href=
-            "https://www.youtube.com/" target="_blank" class=
+            "/160F25F9-CF99-4628-A28B-71295557BAA1.png"
+            width="18" alt="Github" class=
+            "footer-social-icon"></a>
+
+
+<a href=
+            "#" target="_blank" class=
             "footer-social-link w-inline-block"><img src=
-            "https://uploads-ssl.webflow.com/5ba7e424b828fc638b530a9b/5bb9e90a28dfc3a5d9956c9c_youtube%20(1).svg"
-            width="18" alt="YouTube" class=
-            "footer-social-icon"></a><a href=
-            "https://linkedin.com/" target=
+            "/7D1815BE-E944-45B9-897A-B9AFCE03983E.png"
+            width="18" alt="React" class=
+            "footer-social-icon"></a>
+
+
+<a href=
+            "#" target=
             "_blank" class=
             "footer-social-link w-inline-block"><img src=
-            "https://uploads-ssl.webflow.com/5ba7e424b828fc638b530a9b/5bb9e8e128dfc376ad956c95_linkedin%20(1).svg"
-            width="18" alt="LinkedIn" class=
+            "/7E556FBC-D11D-4C04-9F30-210E04C39E7A.png"
+            width="18" alt="Gatsby" class=
             "footer-social-icon"></a>
           </div>
         </div>
@@ -1445,19 +1457,19 @@ box-shadow: inset 2px 2px 2px 0px rgba(0,0,0,0.75);
 
 <a href="#" class=
             "footer-social-link w-inline-block"><img src=
-            "/1D77FBEA-6F0D-4C8B-8FB4-F5CDA187A55D.png"
+            "/160F25F9-CF99-4628-A28B-71295557BAA1.png"
             width="18" height="auto" alt="GitHub" class=
             "footer-social-icon"></a>
 
 <a href="#" class=
             "footer-social-link w-inline-block"><img src=
-            "7D1815BE-E944-45B9-897A-B9AFCE03983E.png"
+            "/7D1815BE-E944-45B9-897A-B9AFCE03983E.png"
             width="18" height="auto" alt="React" class=
             "footer-social-icon"></a>
 
 <a href="#" class=
             "footer-social-link w-inline-block"><img src=
-            "/7D1815BE-E944-45B9-897A-B9AFCE03983E.png"
+            "/7E556FBC-D11D-4C04-9F30-210E04C39E7A.png"
             width="18" width="auto" alt="Gatsby JS" class="footer-social-icon"></a>
           </div>
         </div>
