--- a/index.html
+++ b/index.html
@@ -193,12 +193,21 @@ box-shadow: inset 2px 2px 2px 0px rgba(0,0,0,0.75);
           <div class="menu-button-2 w-nav-button">
             <div class="icon-2 w-icon-nav-menu"></div>
           </div>
+
+
           <form action="/search" class=
           "search-4 w-hidden-main w-form">
-            <input type="search" class="search-input-4 w-input"
+
+<script async src="https://cse.google.com/cse.js?cx=a4e5b6b336eca8fe7"></script>
+<div class="gcse-search"></div>
+
+            <!--- 
+<input type="search" class="search-input-4 w-input"
             maxlength="256" name="query" placeholder="Search…" id=
             "search-3" required=""><input type="submit" value=" "
             class="search-button-4 w-button">
+
+--->
           </form>
 
 <!----FOLLOW WIDGETS
